# tt-decomp

./: .gitignore  .mcp.json  BOOT_TO_FIRST_DRAW_COMPLETE.md  CMakeLists.txt  CODING_STYLE.md  FILE_REORGANIZATION_SUMMARY.md  INIT_FLOW_ANALYSIS.md  MISSING_SYMBOLS.md  README.md  SESSION_FEB28_PONGPLAYER_BATCH.md  TRACE_TO_INPUT_POLL.md  cleanup.md  rexglue_config.toml
.windsurf/plans/: table_tennis_decomp_plan-7bd701.md
.windsurf/workflows/: decomp.md  discriminate.md
build_check/: CMakeCache.txt  Makefile  cmake_install.cmake
build_fresh/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_verify/: CMakeCache.txt  cmake_install.cmake
config/434C4803/: config.json  config.yml  debug_string_field_map.json  flirt_map.json  objects.json  offset_cluster_map.json  rtti_class_hierarchy.json  rtti_vtable_map.json  sda_resolution_map.json  splits.txt  splits_addr_map.json  symbols.txt  symbols_autonamed_v18.txt  vtable_layout_map.json
disasm/sections/: .embsec_.s  .no_bbt.s  BINK.s
docs/decompilation/: AUDIO_CONTROL_WRAPPERS_FEB26.md
docs/naming/: COVERAGE_ROADMAP.md  CROSS_MATCH_GTA4_FINDINGS.md  CROSS_MATCH_SUMMARY.txt  CROSS_MATCH_VISUALIZATION.txt  DELIVERABLES_INDEX.md  HANDOFF_TO_V10_DEV.md  NAMING_QUALITY_ASSESSMENT.md  REMAINING_RECOVERY_OPPORTUNITIES.md  V10_INTEGRATION_GUIDE.md  V11_DESIGN_DOC.md  V11_DESIGN_DOC_VERIFIED.md  V17_FINAL_MILESTONE.md  auto_namer_v7.py  auto_namer_v7_report.txt  auto_namer_v8_report.txt  auto_namer_v9_report.txt  bridge_analysis.txt  cross_match_gta4_v4_fast.py  cross_match_gta4_v4_report.txt  cross_match_seeds_v4.py  naming_research.md  naming_research_complete.md
gamefiles/: README.md  gamecontrollerdb.txt
gamefiles/TEXT/: README.md
gamefiles/data/: README.md
gamefiles/models/: README.md
include/: debug_strings.hpp  generated_structs.h  generated_symbols.h  generated_vtables.h  globals.h  physics.h  tabletennis.h  tabletennis_types.h
include/ai/: ai_system.hpp
include/anim/: pcr_anim_events.hpp
include/audio/: AudioControl.h  audio_system.hpp
include/crt/: crt_crossplatform.h  crt_init.h  native_hooks.h  ppc_recomp.h
include/game/: char_view.hpp  char_view_globals.hpp  debug_strings.hpp  game_logic.hpp  gameloop.h  gd_cutscene.hpp  gd_cutscene_strings.hpp  gd_data_strings.hpp  gd_vib_event.hpp  mc_memcard.hpp  msg_event_handler.hpp  pong_frontend.hpp  pong_game.hpp  pong_network_io.hpp  pong_player_physics.hpp  pong_strings.hpp
include/graphics/: graphics_system.h  graphics_system.hpp  sg_scene.hpp
include/grc/: device.h  grc_setup_types.h  renderer.h
include/input/: input_system.hpp
include/memory/: memory_system.hpp
include/physics/: physics_system.h  physics_system.hpp  tabletennis_physics.h
include/rage/: InputSystem.h  allocator.h  atList.h  atList.hpp  atSingleton.hpp  audio_control_wrappers.hpp  filesystem.h  fsmMachine.h  game_loop.h  game_loop_types.h  game_loop_vtable.h  game_object.h  globals.h  grc_setup_types.h  heap.hpp  holder.h  hsmState.cpp  hsmState.hpp  input.h  input_poll.h  job_system.h  job_test.h  main.h  memory.h  parStream.hpp  rage.h  rage_allocator.h  rage_core_functions.h  rage_misc.hpp  rage_render.hpp  rage_stream_manager.hpp  rage_system.h  rage_system.hpp  rage_utils_simple.h  render.h  render_lifecycle.h  scheduler.h  session_events.hpp  session_events_extended.hpp  singleton.h  (+8 more)
include/resources/: resource_system.hpp
include/scene/: sg_drawable.hpp  sg_node.hpp  sg_physical.hpp  sg_scene_graph.hpp
include/serialization/: serialization_system.hpp
include/ui/: ui_system.hpp
include/xam/: audio.h  input.h  kernel.h  network.h  static_init.h  video.h  voice.h
recomp/: CMakeLists.txt  tt-decomp_config.toml
recomp/src/: main.cpp
recomp/structured_pass5_final/: sources.cmake  tt-decomp_config.h  tt-decomp_init.cpp  tt-decomp_init.h  tt-decomp_recomp.0.cpp  tt-decomp_recomp.1.cpp  tt-decomp_recomp.10.cpp  tt-decomp_recomp.11.cpp  tt-decomp_recomp.12.cpp  tt-decomp_recomp.14.cpp  tt-decomp_recomp.2.cpp  (+24 more)
scripts/: analyze_class_coverage.py  analyze_rtti.py  analyze_symbol_sources.py  calculate_decomp_rate.py  count_decompiled.py  count_implemented_functions.py  explain_decomp_workflow.py  identify_crt_functions.py  phase4a_vcall_resolve.py  phase4b_offset_cluster.py  phase4c_globals_pattern_b.py  run_phase4.sh  run_rexglue.sh  run_stage3.sh  setup_rexglue.sh  stage1_cr_inline.py  stage1_pass3.py  stage1_relooper.py  stage2_cleanup.py  stage3_cleanup.py  stage3_globals.py  stage3_pre_build_tables.py  stage3_rename.py  stage3_structs.py  stage3_vtables.py
src/: flirt_batch_04.cpp  globals.c  globals_extended.c  globals_linker.cpp  stubs.cpp  stubs_final.cpp  stubs_linker.cpp  stubs_linker_0.cpp  stubs_linker_1.cpp  stubs_linker_2.cpp  stubs_linker_3.cpp  stubs_linker_3b.cpp  stubs_linker_4.cpp  stubs_linker_5.cpp  stubs_remaining.c
tools/: gen_headers_v3.py
utils/: README.md  TOOLS_README.md  analyze_crt.py  auto_name.py  build_chat_pdf.py  cleanup_phase1.sh  cleanup_phase2.sh  defines_common.py  finalize_re3_structure.sh  manual_conversion  populate_gamefiles.sh  reorganize_old.sh  reorganize_to_re3.sh  table_tennis_converted
xex_excavation_tt/: README.md  ai_strings.txt  all_named_symbols_with_addrs.txt  all_strings_with_addrs.txt  all_vtables_alphabetical.txt  assert_strings.txt  audio_classes.txt  audio_strings.txt  build_info.txt  call_graph.txt  callers.txt  class_hierarchy.txt  classes_with_methods.txt  d3d9_render_patterns.txt  data_section_structs.txt  debug_strings.txt  demangled_symbols.txt  float_constants.txt  format_strings.txt  function_class_map.txt  functions_named_by_strings.txt  functions_with_addrs.txt  game_C_classes.txt  game_classes.txt  game_classes_taxonomy.txt  game_constants.txt  global_xrefs.txt  hottest_functions.txt  import_xrefs.txt  imports_with_addrs.txt  leaf_functions.txt  match_state_machine.txt  network_classes.txt  network_strings.txt  physics_classes.txt  physics_strings.txt  rage_classes.txt  rage_vtable_comparison.txt  render_classes.txt  render_strings.txt  (+13 more)
(+380 files in other folders)
